# TDS-Project_2

./: .env  README.md  autolysis.py  pyproject.toml
goodreads/: README.md
happiness/: README.md
media/: README.md
